--- a/packages/balena-etcher/package.json
+++ b/packages/balena-etcher/package.json
@@ -110,7 +110,7 @@
     "typescript": "4.4.4",
     "url-loader": "4.1.1",
     "uuid": "8.1.0",
-    "webpack": "5.11.0",
+    "webpack": "^5.74.0",
     "webpack-cli": "4.2.0",
     "webpack-dev-server": "4.5.0"
   },
